# wrapidos

./: Cargo.toml  README.md
src/: curl_idos.rs  entry_row_completion.rs  main.rs  parse_idos.rs  style.css  zastavky.csv
