[package]
name = "wrapidos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4.8", package = "gtk4" }
isahc = "1.7"
html_parser = "0.6.3"
diacritics = "0.1.3"
urlencoding = "2.1.0"
adw = { version = "0.2.0-alpha.2", package = "libadwaita", features = ["v1_2"] }
